--- a/Styling.css
+++ b/Styling.css
@@ -17,6 +17,7 @@ body {
     margin: 0;
 }
 
+/* Container Styling */
 .container {
     width: 90%;
     max-width: 800px;
@@ -53,6 +54,7 @@ body {
     text-transform: uppercase;
 }
 
+/* Details Styling */
 .content .details {
     margin: 1.5em 0 1.25em;
 }
@@ -66,6 +68,7 @@ body {
     font-weight: 500;
 }
 
+/* Input Styling */
 .content input {
     width: 100%;
     height: 3.75em;
@@ -88,6 +91,7 @@ body {
     color: #bfbfbf;
 }
 
+/* Buttons Styling */
 .content .buttons {
     display: flex;
     margin-top: 1.25em;
@@ -110,11 +114,11 @@ body {
     transform: scale(0.97);
 }
 
-.buttons .refresh-word {
+.buttons .new-word {
     background: rgb(161, 159, 159);
 }
 
-.buttons .refresh-word:hover {
+.buttons .new-word:hover {
     background: #5f666d;
 }
 
